fix(Consumers): update topic stats values align

--- a/src/containers/Tenant/Diagnostics/Consumers/TopicStats/ConsumersTopicStats.scss
+++ b/src/containers/Tenant/Diagnostics/Consumers/TopicStats/ConsumersTopicStats.scss
@@ -24,7 +24,7 @@
     }
     &__value {
         display: flex;
-        justify-content: flex-end;
+        justify-content: flex-start;
         align-items: center;
 
         height: 30px;
